# blackbox-agent-accountability

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.omc/state/: agent-replay-53f9d998-b700-4e14-bb21-20141ddc08aa.jsonl  mission-state.json  subagent-tracking.json
blackbox/: apikeys.py  auditlock.py  auth.py  byok.py  crypto.py  db.py  evidence.py  ingest.py  logging_config.py  logging_filter.py  migrate.py  orgs.py  policy.py  recorder.py  schema.py  store.py  tribunal.py
blackbox/demo/: agent.py  fallback_log.jsonl  inject.py  replay.py
docs/: demo.html  index.html
docs/superpowers/plans/: 2026-06-07-blackbox-saas-ROADMAP.md  2026-06-07-plan-1-postgres-multitenant-store.md  2026-06-07-plan-2-identity-and-access.md  (+3 more)
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: TopNav.tsx
frontend/lib/: api.test.ts  api.ts  supabase.test.ts  supabase.ts  useSession.ts
migrations/: 0001_init_tenant_store.sql  0002_identity.sql  0003_byok.sql
policies/: eu_ai_act.yaml
tests/: conftest.py  test_api.py  test_apikeys.py  test_audit_lock.py  test_auth.py  test_byok.py  test_cors.py  test_db.py  test_evidence.py  test_health.py  test_identity_schema.py  test_logging_config.py  test_logging_filter.py  test_migrate.py  test_orgs.py  test_policy.py  test_rate_limit.py  test_recorder.py  test_schema_org.py  test_sessions_demo.py  test_store.py  test_tribunal.py  test_tribunal_offline.py
ui/: dashboard.html
(+6 files in other folders)
